<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data >

        <variable
            name="loginData"
            type="com.akbartravels.atimvvm.LoginViewModel" />
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >


    <LinearLayout
        android:weightSum="5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:weightSum="4"
            android:orientation="vertical"
            android:background="@drawable/login_btn"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp">
           <!-- <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">



            </LinearLayout>-->
            <LinearLayout

                android:layout_marginLeft="@dimen/margin_scale_20"
                android:layout_marginRight="@dimen/margin_scale_20"
                android:layout_weight="2.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/login_logo" />
            </LinearLayout>
          <!--  <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">



            </LinearLayout>-->
            <LinearLayout

                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <com.akbartravels.atimvvm.utils.FontTextViewBold
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textColor="@color/color_white"
                    android:text="@string/title_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.akbartravels.atimvvm.utils.FontTextViewLight
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/color_white"
                    android:text="@string/title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">



            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </LinearLayout>
            <LinearLayout
               android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TableRow
                    android:weightSum="1"
                    android:layout_margin="@dimen/margin_scale_10"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_scale_50"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:layout_weight=".1"
                            android:background="@drawable/user_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <EditText
                        android:cursorVisible="true"
                        android:textCursorDrawable="@color/color_main_bg"
                        android:background="@null"
                        android:layout_weight=".9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/uname"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:id="@+id/edt_uname"
                        android:maxLength="50"
                        android:padding="@dimen/margin_scale_16"
                        android:text="@={loginData.dataEmail}"
                        />
                </TableRow>


            </LinearLayout>
            <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TableRow
                    android:weightSum="1"
                    android:layout_margin="@dimen/margin_scale_10"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_scale_50"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:layout_weight=".1"
                            android:background="@drawable/password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <EditText
                        android:text="@={loginData.dataPassword}"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@color/color_main_bg"
                        android:background="@null"
                        android:layout_weight=".9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/pswd"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:id="@+id/edt_pswd"
                        android:maxLength="50"
                        android:padding="@dimen/margin_scale_16"
                        />
                </TableRow>


            </LinearLayout>
            <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </LinearLayout>
            <LinearLayout
                android:onClick="@{loginData.onLoginButtonClicked}"
                android:id="@+id/btn_ll_login"
                android:layout_weight="1"
                android:background="@drawable/login_btn"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.akbartravels.atimvvm.utils.FontTextView
                    android:id="@+id/txt_login"
                    android:textAllCaps="true"
                    android:textColor="@color/color_white"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5"
        app:visibility="@{loginData.progressBar}">

    </ProgressBar>
</android.support.constraint.ConstraintLayout>
</layout>